@@ -1,6 +1,5 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.Mapper.BinaryContentMapper;
 import com.sprint.mission.discodeit.Mapper.MessageMapper;
 import com.sprint.mission.discodeit.Mapper.PageResponseMapper;
 import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
@@ -8,28 +7,37 @@ import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
 import com.sprint.mission.discodeit.dto.response.MessageDto;
 import com.sprint.mission.discodeit.dto.response.PageResponse;
-import com.sprint.mission.discodeit.entity.*;
+import com.sprint.mission.discodeit.entity.BinaryContent;
+import com.sprint.mission.discodeit.entity.Message;
+import com.sprint.mission.discodeit.entity.MessageAttachment;
+import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.exception.channel.ChannelNotFound;
+import com.sprint.mission.discodeit.exception.message.MessageNotFound;
+import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
 import com.sprint.mission.discodeit.repository.*;
 import com.sprint.mission.discodeit.repository.springjpa.SpringDataMessageAttachmentRepository;
 import com.sprint.mission.discodeit.service.MessageService;
 import com.sprint.mission.discodeit.storage.BinaryContentStorage;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
 public class BasicMessageService implements MessageService {
 
   private final MessageRepository messageRepository;
-  //
   private final ChannelRepository channelRepository;
   private final UserRepository userRepository;
   private final BinaryContentRepository binaryContentRepository;
@@ -41,84 +49,92 @@ public class BasicMessageService implements MessageService {
   @Override
   @Transactional
   public MessageDto create(MessageCreateRequest messageCreateRequest,
-                        List<BinaryContentCreateRequest> binaryContentCreateRequests) {
-
+                           List<BinaryContentCreateRequest> binaryContentCreateRequests) {
     UUID channelId = messageCreateRequest.channelId();
     UUID authorId = messageCreateRequest.authorId();
+    String content = messageCreateRequest.content();
+    int attachments = binaryContentCreateRequests.size();
+    log.info("메시지 생성 요청: channelId={}, authorId={}, attachments={}, content={}",
+            channelId, authorId, attachments, content);
 
     if (!channelRepository.existsById(channelId)) {
-      throw new NoSuchElementException("Channel with id " + channelId + " does not exist");
+      log.warn("메시지 생성 실패 (채널 없음): channelId={}", channelId);
+      throw new ChannelNotFound(Map.of("id", channelId));
     }
     if (!userRepository.existsById(authorId)) {
-      throw new NoSuchElementException("Author with id " + authorId + " does not exist");
+      log.warn("메시지 생성 실패 (작성자 없음): authorId={}", authorId);
+      throw new UserNotFoundException(Map.of("id", authorId));
     }
 
     List<BinaryContent> binaryContents = binaryContentCreateRequests.stream()
-            .map(attachmentRequest -> {
-              String fileName = attachmentRequest.fileName();
-              String contentType = attachmentRequest.contentType();
-              byte[] bytes = attachmentRequest.bytes();
-              BinaryContent binaryContent = binaryContentRepository.save(new BinaryContent(fileName, (long) bytes.length, contentType));
-              UUID binaryContentUuid = binaryContentStorage.put(binaryContent.getId(), bytes);
-              return binaryContent;
+            .map(req -> {
+              BinaryContent bc = binaryContentRepository.save(
+                      new BinaryContent(req.fileName(), (long) req.bytes().length, req.contentType()));
+              UUID uuid = binaryContentStorage.put(bc.getId(), req.bytes());
+              log.info("첨부파일 저장: id={}, uuid={}, fileName={}", bc.getId(), uuid, req.fileName());
+              return bc;
             })
-            .toList();
+            .collect(Collectors.toList());
 
     Channel channel = channelRepository.findById(channelId).orElse(null);
     User user = userRepository.findById(authorId).orElse(null);
+    Message message = messageRepository.save(new Message(content, channel, user));
+    log.info("메시지 저장 완료: messageId={}", message.getId());
 
-    String content = messageCreateRequest.content();
-    Message message = new Message(
-            content,
-            channel,
-            user
-    );
+    binaryContents.forEach(bc -> {
+      messageAttachmentRepository.save(new MessageAttachment(message, bc));
+    });
 
-    Message saveMessage = messageRepository.save(message);
-    binaryContents
-            .stream()
-            .map(binaryContent -> {
-              MessageAttachment messageAttachment = new MessageAttachment(saveMessage, binaryContent);
-              return messageAttachmentRepository.save(messageAttachment);
-            }).toList();
-
-    return messageMapper.toDto(saveMessage);
+    MessageDto dto = messageMapper.toDto(message);
+    log.info("메시지 생성 완료: messageId={}, dto={}", message.getId(), dto);
+    return dto;
   }
 
   @Override
   public MessageDto find(UUID messageId) {
-    return messageRepository.findById(messageId)
+    log.info("메시지 조회 요청: messageId={}", messageId);
+    MessageDto dto = messageRepository.findById(messageId)
             .map(messageMapper::toDto)
-            .orElseThrow(
-                    () -> new NoSuchElementException("Message with id " + messageId + " not found"));
+            .orElseThrow(() -> {
+              log.warn("메시지 조회 실패: messageId={} not found", messageId);
+              return new MessageNotFound(Map.of("id", messageId));
+            });
+    log.info("메시지 조회 완료: messageId={}", messageId);
+    return dto;
   }
 
   @Override
   public PageResponse<MessageDto> findAllByChannelId(UUID channelId, Pageable pageable) {
-    Page<MessageDto> messages = messageRepository
+    log.info("채널 메시지 페이징 조회 요청: channelId={}, page={}, size={}",
+            channelId, pageable.getPageNumber(), pageable.getPageSize());
+    Page<MessageDto> page = messageRepository
             .findAllByChannelIdPaging(channelId, pageable)
             .map(messageMapper::toDto);
-
-    return pageResponseMapper.fromPage(messages);
-
+    PageResponse<MessageDto> response = pageResponseMapper.fromPage(page);
+    log.info("채널 메시지 페이징 조회 완료: channelId={}", channelId);
+    return response;
   }
 
   @Override
   @Transactional
   public MessageDto update(UUID messageId, MessageUpdateRequest request) {
-    String newContent = request.newContent();
+    log.info("메시지 수정 요청: messageId={}, newContent={}", messageId, request.newContent());
     Message message = messageRepository.findById(messageId)
-            .orElseThrow(
-                    () -> new NoSuchElementException("Message with id " + messageId + " not found"));
-
-    message.update(newContent);
-    Message updateMassage = messageRepository.save(message);
-    return messageMapper.toDto(updateMassage);
+            .orElseThrow(() -> {
+              log.warn("메시지 수정 실패: messageId={} not found", messageId);
+              return new MessageNotFound(Map.of("id", messageId));
+            });
+    message.update(request.newContent());
+    Message updated = messageRepository.save(message);
+    log.info("메시지 수정 완료: messageId={}", updated.getId());
+    return messageMapper.toDto(updated);
   }
 
   @Override
   @Transactional
   public void delete(UUID messageId) {
+    log.info("메시지 삭제 요청: messageId={}", messageId);
     messageRepository.deleteById(messageId);
+    log.info("메시지 삭제 완료: messageId={}", messageId);
   }
 }
